# C_Algorithms_And_Structures

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  clean.sh  compile_commands.json
include/: algorithms.h
include/Lists/: List.h  Node.h
include/Strings/: String.h
src/: algorithms.c
src/Lists/: List.c  Node.c
src/Strings/: String.c
test/: test_algorithms.cpp  test_list.cpp
